# yolomux

./: .gitignore  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  CONTRIBUTOR_TERMS.md  DEVELOPMENT.md  DOIT.36.md  DOIT.37.md  DOIT.51.md  DOIT.52.md  DOIT.53.md  DOIT.57.md  DOIT.59.md  DOIT.7.md  DOIT.8.md  DOIT.9.md  DOIT.refactor-agent-status.md  DOIT.refactor_agent_status_ownership.md  DOIT.yolomux-cpu-bursts-drag-jank-coverage-errors.md  DONE.md  EDITOR-CODEMIRROR.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  auto_approve_tmux.py  boot.sh  mock_agent_common.py  mock_claude.py  mock_codex.py  package.json  pyproject.toml  pytest.ini  requirements-yoagent-managed.txt  requirements.txt  tmux_wall.py  yolomux.py
docs/: DEVELOPMENT.md  DONE.md  EDITOR-CODEMIRROR.md  GUI_SPEC.md  GUI_SPECS.md  RESEARCH.md  TODO.md  YOAGENT.md  YOAGENT_SKILLS.md
mock/: mock_agent_common.py  mock_claude.py  mock_codex.py
prototypes/: ai_session_files.py  codemirror-entry.js  codex_text_client.py  subwindow-pressed-styles.html
static/: brand.css  codemirror.js  login.css  preauth-locale.js  setup-auth.css  setup-auth.js  tmux-wall.css  tmux-wall.js  yolomux.css  yolomux.js
tests/: _gen_shapes.js  _gen_shapes_reader.py  _git_helpers.py  conftest.py  drop_action_result.test.js  editor_preview.test.js  editor_preview_core.test.js  editor_preview_settings.test.js  editor_preview_suite.js  editor_preview_tmux.test.js  file_surface_menu.test.js  golden_pipeline_render.node.js  golden_pipeline_render.test.js  i18n_locale_registry.test.js  i18n_structured_message.test.js  layout_async.test.js  layout_restore.test.js  layout_test_helper.js  layout_url.test.js  share_file_surface_replay.test.js  share_theme.test.js  test_app.py  (+129 more)
(+439 files in other folders)
